integrador_2/My Car/mycar/src/main/java/com/example/mycar/error/VehiculoSinCostoException.java
package com.example.mycar.error;

public class VehiculoSinCostoException extends RuntimeException {
    public VehiculoSinCostoException(Long vehiculoId) {
        super("El vehículo " + vehiculoId + " no tiene costo definido");
    }
}

